--- a/styles/styel.css
+++ b/styles/styel.css
@@ -3,11 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
-header{
+/* header{
     background-color:rgb(31, 31, 35);
     padding-bottom: 10px;
     padding-top: 10px;
     
+} */
+.tv{
+    background-color:rgb(31, 31, 35);
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 .top-var{
     display: flex;
@@ -28,5 +33,39 @@ header{
     text-align: center;
     text-decoration: none;
     color: white;
+    margin-right: 10px;
+}
+
+/* topbar section end here  */
+/* navbar section start here  */
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 20px;
+    padding-bottom: 20px;;
+    background-color: #A0C49D;
+
+}
+
+.lg{
+    font-family: syne;
+    font-weight: 700;
+}
+.menus{
+    list-style: none;
+    display: flex;
+}
+.menu,li{
+    margin-right: 30px;
+    font-family: poppins;
+
+}
+
+.fal{
+    text-align: center;
+    text-decoration: none;
+    color: black;
     margin-right: 10px;
 }
