--- a/styles/styel.css
+++ b/styles/styel.css
@@ -112,7 +112,7 @@ nav{
 }
 
 .feature{
-margin-top: 30px;
+margin-top: 80px;
 }
 .sec-title{
     font-family: syne;
@@ -122,5 +122,103 @@ margin-top: 30px;
 }
 .sec-sub-title{
     text-align: center;
+
+}
+
+.box-container{
+    margin-top: 30px;
+    height: 600px;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.box{
+    height: fit-content;
+    width: 350px;
+    
+    background-color: #EFEFEF;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     
 }
+
+.pi{
+    height: 200px;
+   
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+
+}
+
+.pt{
+    font-family: syne;
+    font-weight: 500;
+    font-size: 40px;
+    text-align: center;
+    margin-top: 5px;
+
+}
+
+.pd{
+    font-family: poppins;
+    font-weight: 400;
+    font-size: 19px;
+    text-align: left;
+    margin: 5px 40px;
+
+}
+.pp{
+    font-family: poppins;
+    font-weight: 400;
+    text-align: center;
+    font-size: 30px;
+}
+
+.btn{
+    width: auto;
+    border: none;
+    background-color: #A0C49D;
+    color: white;
+    font-family: poppins;
+    font-weight: 600;
+    font-size: 30px;
+    margin: 5px 10px 12px 12px;
+    padding: 0px 26%;
+    text-transform: uppercase;
+    
+
+}
+
+.btn:hover{
+    background-color: #C4D7B2;
+    color: black;
+}
+
+.rating{
+    font-size: 25px;
+    text-align: center;
+    
+}
+
+.checked {
+    color: rgb(66, 66, 66);
+}
+
+.product-img{
+    background-image: url('../image/sneaker1.jpeg');
+}
+
+.product-img2{
+    background-image: url('../image/sneaker2.jpg');
+}
+.product-img3{
+    background-image: url('../image/sneaker3.jpg');
+}
+
+/* main section end here  */
+/* footer section start here  */
+
+
